# PRO2

./: README.md
p0/: CMakeLists.txt  main.c  rational_pointer.c  rational_pointer.h  rational_struct.c  rational_struct.h
p1/: config.cmake  dynamic_list.c  dynamic_list.h  main.c  static_list.c  test.c  types.h
p2/P2_IMPL_D/: bid_stack.c  bid_stack.h  main.c  product_list.c  product_list.h  static_list.c  static_list.h  types.h
p2/P2_IMPL_S/: bid_stack.c  bid_stack.h  main.c  product_list.c  product_list.h  types.h
p2/P2_IMPL_S/script_minimos/: pruebas.txt
